# patchworks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  pyproject.toml
.github/workflows/: ci.yml
benches/: diff_hot_paths.rs  query_hot_paths.rs
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/db/: differ.rs  inspector.rs  migration.rs  mod.rs  snapshot.rs  types.rs
src/diff/: data.rs  export.rs  merge.rs  migration.rs  mod.rs  schema.rs  semantic.rs
src/patchworks/: __init__.py  __main__.py  cli.py
src/patchworks/db/: __init__.py  differ.py  inspector.py  migration.py  snapshot.py  types.py
src/patchworks/diff/: __init__.py  data.py  export.py  merge.py  migration.py  schema.py  semantic.py
src/patchworks/web/: __init__.py  app.py  routes.py
src/patchworks/web/static/: style.css
src/patchworks/web/templates/: base.html  browse.html  diff.html  export.html  index.html  rows.html  snapshots.html
src/patchworks/web/templates/partials/: ddl.html  diff.html  export.html  rows.html  schema.html  snapshot_list.html
src/state/: mod.rs  recent.rs  workspace.rs
src/ui/: dialogs.rs  diff_view.rs  file_panel.rs  mod.rs  progress.rs  schema_browser.rs  schema_diff.rs  snapshot_panel.rs  sql_export.rs  table_view.rs  workspace.rs
tests/: cli_tests.rs  diff_tests.rs  migration_tests.rs  phase7_tests.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  snapshot_tests.rs  test_cli.py  test_diff.py  test_export.py  test_inspector.py  test_merge.py  test_migration.py  test_semantic.py  test_snapshot.py  test_web.py
tests/fixtures/: README.md  create_fixtures.sql
tests/support/: mod.rs
