[package]
name = "patchworks"
version = "0.1.0"
edition = "2021"
description = "Git-style visual diffs for SQLite databases."
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
rfd = "0.17.2"
rusqlite = { version = "0.39.0", features = ["bundled", "backup"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.7.0"
tempfile = "3.27.0"

[[bench]]
name = "diff_hot_paths"
harness = false

[[bench]]
name = "query_hot_paths"
harness = false
